--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/wedding-gallery
     docker:
-      - image: circleci/python:2.7.12
+      - image: circleci/2.7.15-jessie-node-browsers
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
