--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ jobs:
     working_directory: ~/wedding-gallery
     docker:
       - image: circleci/python:2.7.15-jessie-node-browsers
+        environment:
+          AWS_STORAGE_BUCKET_NAME: sibtc-assets1
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
