--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
     docker:
       - image: circleci/python:2.7.15-jessie-node-browsers
         environment:
+          AWS_ACCESS_KEY_ID: AKIAJT6TDXOQ3VCT3VCA
+          AWS_SECRET_ACCESS_KEY: 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
           AWS_STORAGE_BUCKET_NAME: sibtc-assets1
     steps:
       - checkout
